# model/model.go
@@ -1,0 +1,6 @@
+package model
+
+type SendMessageBody struct {
+	RecipientID string `json:"recipient_id" binding:"required"`
+	Content     string `json:"content" binding:"required"`
+}
